added functionality to UV Index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h4 id="temp">Temperture:</h2>
           <h4 id="humidity">Humidity:</h4>
           <h4 id="windSpeed">windSpeed:</h4>
-          <h4 id= "uvindex">UV index:</h4>
+          <h4 id= "uvIndex">UV index:</h4>
         </div>
         <br />
         <div class="col-12">
