added humidity to the future five day forecast

--- a/index.html
+++ b/index.html
@@ -62,37 +62,39 @@
           <h4 id= "uvIndex">UV index:</h4>
         </div>
         <br />
-        <div class="col-12">
+        <div class="ard">
+          <div class="ccol-12">
           <h1>Future Forecast</h1>
+          <div class="card-deck">
           <div class="col-2 float-left">
             <h4 id="oneday"></h4>
             <!--Icon-->
-            <p>Temperture:</p>
-            <p>Humidity:</p>
+            <p id="tempTwo"></p>
+            <p id="humidTwo"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="twoday"></h4>
             <!--Icon-->
-            <p>Temperture:</p>
-            <p>Humidity:</p>
+            <p id="tempThree"></p>
+            <p id="humidThree"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="threeday"></h4>
             <!--Icon-->
-            <p>Temperture:</p>
-            <p>Humidity:</p>
+            <p id="tempFour"></p>
+            <p id="humidFour"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="fourday"></h4>
             <!--Icon-->
-            <p>Temperture:</p>
-            <p>Humidity:</p>
+            <p id="tempFive"></p>
+            <p id="humidFive"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="fiveday"></h4>
             <!--Icon-->
-            <p>Temperture:</p>
-            <p>Humidity:</p>
+            <p id="tempSix"></p>
+            <p id="humidSix"></p>
           </div>
         </div>
       </div>
