added the weather icons for the next five days

--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
           <div class="card-deck">
           <div class="col-2 float-left">
             <h4 id="oneday"></h4>
-            <!--Icon-->
+            <img id="iconCodeTwo">
             <p id="tempTwo"></p>
             <p id="humidTwo"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="twoday"></h4>
-            <!--Icon-->
+            <img id="iconCodeThree">
             <p id="tempThree"></p>
             <p id="humidThree"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="threeday"></h4>
-            <!--Icon-->
+            <img id="iconCodeFour">
             <p id="tempFour"></p>
             <p id="humidFour"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="fourday"></h4>
-            <!--Icon-->
+            <img id="iconCodeFive">
             <p id="tempFive"></p>
             <p id="humidFive"></p>
           </div>
           <div class="col-2 float-left">
             <h4 id="fiveday"></h4>
-            <!--Icon-->
+            <img id="iconCodeSix">
             <p id="tempSix"></p>
             <p id="humidSix"></p>
           </div>
