--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </body>
 
   <!--Scripts-->
-  <script src="http://www.geoplugin.net/javascript.gps"></script>
+  <script src="http://www.geoplugin.net/javascript.gp"></script>
   <script
     src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
